--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
       "yarn format"
     ]
   },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma",
+    "seed": "ts-node src/prisma/seed.ts"
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@prisma/client": "^3.3.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "superjson": "^1.8.0"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
@@ -36,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "babel-jest": "^27.0.2",
+    "babel-plugin-superjson-next": "^0.4.2",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -49,6 +56,7 @@
     "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.0.10",
     "prettier": "^2.0.2",
+    "prisma": "^3.3.0",
     "typescript": "^4.1.3"
   }
 }
