--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "superjson": "^1.8.0"
+    "superjson": "^1.8.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
