--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@prisma/client": "^3.3.0",
+    "clsx": "^1.1.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
