--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@prisma/client": "^3.3.0",
     "clsx": "^1.1.1",
+    "formik": "^2.2.9",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
