--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^3.3.0",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
+    "material-ui-confirm": "2.1.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
