--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
