--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
     "test": "jest",
+    "cypress:open": "cypress open",
     "test-all": "yarn lint && yarn type-check && yarn test",
     "prepare": "husky install"
   },
@@ -52,6 +53,7 @@
     "@typescript-eslint/parser": "^4.14.2",
     "babel-jest": "^27.0.2",
     "babel-plugin-superjson-next": "^0.4.2",
+    "cypress": "^8.7.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
