--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
     "test": "jest",
-    "cypress:open": "cypress open",
     "test-all": "yarn lint && yarn type-check && yarn test",
     "prepare": "husky install"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "yarn run type-check"
+      "pre-push": "yarn run test-all"
     }
   },
   "lint-staged": {
@@ -27,6 +26,9 @@
   "prisma": {
     "schema": "src/prisma/schema.prisma",
     "seed": "ts-node src/prisma/seed.ts"
+  },
+  "msw": {
+    "workerDirectory": "public"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -66,6 +68,7 @@
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.0.10",
+    "msw": "^0.35.0",
     "prettier": "^2.0.2",
     "prisma": "^3.3.0",
     "typescript": "^4.1.3"
