--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     }
   },
   "exclude": ["node_modules", ".next", "out"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"],
+  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.js"],
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
